fix comments time on small screens

--- a/app/assets/stylesheets/images.scss
+++ b/app/assets/stylesheets/images.scss
@@ -231,6 +231,12 @@
   color: #868F9B;
 }
 
+@media (max-width: 435px) {
+  .image-comments .media .media-body .media-heading .time {
+    margin-left: 0px;
+  }
+}
+
 .image-comments .media .media-body .media-heading .reply {
   float: right;
   margin: 0;
